account.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-deployment
  labels:
    app: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
      - name: account
        image: leonahoms/finalaccount
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  type: NodePort
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30100
