accountdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accountdb-deployment
  labels:
    app: accountdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accountdb
  template:
    metadata:
      labels:
        app: accountdb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
#        env:
#        - name: MONGO_INITDB_ROOT_USERNAME
#          valueFrom:
#            secretKeyRef:
#              name: accountdb-secret
#              key: mongo-user
#        - name: MONGO_INITDB_ROOT_PASSWORD
#          valueFrom:
#            secretKeyRef:
#              name: accountdb-secret
#              key: mongo-password
---
apiVersion: v1
kind: Service
metadata:
  name: accountdb-service
spec:
  selector:
    app: accountdb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
