blogdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogdb-deployment
  labels:
    app: blogdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blogdb
  template:
    metadata:
      labels:
        app: blogdb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: blogdb-service
spec:
  selector:
    app: blogdb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
