chatDB.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chartdb-deployment
  labels:
    app: chartdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chartdb
  template:
    metadata:
      labels:
        app: chartdb
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: chartdb-service
spec:
  selector:
    app: chartdb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
