mail.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mail-deployment
  labels:
    app: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mail
  template:
    metadata:
      labels:
        app: mail
    spec:
      containers:
      - name: mail
        image: leonahoms/finalmail
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: mail-service
spec:
  type: NodePort
  selector:
    app: mail
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
      nodePort: 30103
