question.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-deployment
  labels:
    app: question
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question
  template:
    metadata:
      labels:
        app: question
    spec:
      containers:
        - name: question
          image: leonahoms/finalquestion
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: question-service
spec:
  type: ClusterIP
  selector:
    app: question
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
