questiondb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questiondb-deployment
  labels:
    app: questiondb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questiondb
  template:
    metadata:
      labels:
        app: questiondb
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: questiondb-service
spec:
  selector:
    app: questiondb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
