solutionDB.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution-deployment
  labels:
    app: solution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution
  template:
    metadata:
      labels:
        app: solution
    spec:
      containers:
        - name: mongodb
          image: mongo:5.0
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: solution-service
spec:
  selector:
    app: solution
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
