solution.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solution-deployment
  labels:
    app: solution
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solution
  template:
    metadata:
      labels:
        app: solution
    spec:
      containers:
        - name: solution
          image: leonahoms/finalsolution
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: solution-service
spec:
  type: ClusterIP
  selector:
    app: solution
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
#      nodePort: 30101
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: solution-destination
spec:
  host: solution-service
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 100
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: solution-service
#  annotations:
#    kubernetes.io/ingress.target: /
#spec:
#  ingressClassName: nginx-example
#  rules:
#    - host: solution-service.ff4c99370ad645e4812a.eastus.aksapp.io
#      http:
#          paths:
#            - path: /
#              pathType: Prefix
#              backend:
#                service:
#                  name: solution-service
#                  port:
#                    number: 8081
